--- a/templates/clientes/nomina.html.twig
+++ b/templates/clientes/nomina.html.twig
@@ -78,7 +78,7 @@
                           </ul>
                       </div>
                       <div class="body">
-                          <div class="table-responsive">
+                          <div class="table">
                               <table class="table table-bordered table-striped table-hover js-basic-example dataTable">
                                   <thead>
                                       <tr>
