add documento alta

--- a/templates/clientes/nomina.html.twig
+++ b/templates/clientes/nomina.html.twig
@@ -293,7 +293,7 @@
 
           <div class="form-group">
             <div class="form-line">
-              <input type="text" name="nombres" id="nombres" class="form-control" placeholder="Nombres">
+              <input type="text" name="nombres" id="nombres" class="form-control" placeholder="Nombres" required>
             </div>
           </div>
          <div class="form-group">
@@ -301,7 +301,21 @@
               <input type="text" name="cargo" id="cargo" class="form-control" placeholder="Cargo">
             </div>
           </div>
+            <div class="form-group">
+                <div class="form-line">
+                    <p><div class="sidebar-userpic-name">Alta </div></p>
+                    <input type="file" name="documento-alta" id="documento-alta" class="custom-file" placeholder="Alta" accept="application/pdf">
+                    <hr />
+                </div>
+            </div>
           <div class="row">
+              <div class="col-sm-12 col-lg-12">
+                  <div class="form-group">
+                      <div class="form-line">
+                          <label>Días de descanso</label>
+                      </div>
+                  </div>
+              </div>
           <div class="col-sm-2 col-lg-2">
               <div class="form-check form-check-radio">
                 <label>
