--- a/templates/home/menu_admin.html.twig
+++ b/templates/home/menu_admin.html.twig
@@ -26,6 +26,13 @@
 </li>
 
 <li>
+<a href="{{path('pagos_clientes',{factura_interna:true})}}" class=" waves-effect waves-block">
+    <i class="fas fa-folder"></i>
+    <span>Facturas Inter Compañia</span>
+</a>
+</li>
+
+<li>
 <a href="{{path('cuentas_por_cobrar_clientes')}}" class=" waves-effect waves-block">
     <i class="fas fa-folder"></i>
     <span>Facturas por pagar</span>
