--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -315,7 +315,7 @@
         <script src="{{asset('adminlte/assets/js/form.min.js')}}"></script>
         <script src="{{asset('adminlte/assets/js/pages/forms/advanced-form-elements.js')}}"></script>
 
-       <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+      <!-- <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>!-->
         
         <script type="text/javascript">
             $('document').ready(function(){
