nomina subir archivo bloquear horario guardado semanal

--- a/templates/clientes/nomina.html.twig
+++ b/templates/clientes/nomina.html.twig
@@ -248,13 +248,7 @@
 
                                   </tbody>
                                   <tfoot>
-                                    <tr><td>
-
-                                          <button class="btn btn-primary" id="guardar-nomina"> Guardar
-                                            
-                                            </button>
-                                    </td>
-                                  </tr>
+                                   
                                   </tfoot>
                               </table>
                           </div>
@@ -468,6 +462,8 @@
 {% endblock %} 
 
 {% block body_javascript %}
+
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
 
 <script type="text/javascript">
 
