--- a/templates/clientes/nomina_excel.html.twig
+++ b/templates/clientes/nomina_excel.html.twig
@@ -39,164 +39,128 @@
           {% if objempleado.horario.D=="A"  %}
            A
          {% endif %}
-         {% if objempleado.horario.D=="AA"  %}
-           AA
-         {% endif %}
-         {% if objempleado.horario.D=="VA"  %}
-           VA
-         {% endif %}
          {% if objempleado.horario.D=="D"  %}
            D
          {% endif %}
-         {% if objempleado.horario.D=="CA"  %}
-           CA
+        
+         {% if objempleado.horario.D=="F"  %}
+           F
          {% endif %}
-         {% if objempleado.horario.D=="CI"  %}
-           CI
+         {% if objempleado.horario.D=="I"  %}
+           I
          {% endif %}
-         {% if objempleado.horario.D=="X"  %}
-           X
+         {% if objempleado.horario.D=="V"  %}
+           V
          {% endif %}
+        
           
         </td>
         <td >
          {% if objempleado.horario.L=="A"  %}
            A
          {% endif %}
-         {% if objempleado.horario.L=="AA"  %}
-           AA
-         {% endif %}
-         {% if objempleado.horario.L=="VA"  %}
-           VA
-         {% endif %}
          {% if objempleado.horario.L=="D"  %}
            D
          {% endif %}
-         {% if objempleado.horario.L=="CA"  %}
-           CA
+         {% if objempleado.horario.L=="F"  %}
+           F
          {% endif %}
-         {% if objempleado.horario.L=="CI"  %}
-           CI
+         {% if objempleado.horario.L=="I"  %}
+           I
          {% endif %}
-         {% if objempleado.horario.L=="X"  %}
-           X
+         {% if objempleado.horario.L=="V"  %}
+           V
          {% endif %}
+        
         </td>
         <td >
           {% if objempleado.horario.M=="A"  %}
            A
          {% endif %}
-         {% if objempleado.horario.M=="AA"  %}
-           AA
-         {% endif %}
-         {% if objempleado.horario.M=="VA"  %}
-           VA
-         {% endif %}
          {% if objempleado.horario.M=="D"  %}
            D
          {% endif %}
-         {% if objempleado.horario.M=="CA"  %}
-           CA
+         {% if objempleado.horario.M=="F"  %}
+           F
          {% endif %}
-         {% if objempleado.horario.M=="CI"  %}
-           CI
+         {% if objempleado.horario.M=="I"  %}
+           I
          {% endif %}
-         {% if objempleado.horario.M=="X"  %}
-           X
+         {% if objempleado.horario.M=="V"  %}
+           V
          {% endif %}
+         
       </td>
       <td >
           {% if objempleado.horario.MI=="A"  %}
            A
          {% endif %}
-         {% if objempleado.horario.MI=="AA"  %}
-           AA
-         {% endif %}
-         {% if objempleado.horario.MI=="VA"  %}
-           VA
-         {% endif %}
          {% if objempleado.horario.MI=="D"  %}
            D
          {% endif %}
-         {% if objempleado.horario.MI=="CA"  %}
-           CA
+         {% if objempleado.horario.MI=="F"  %}
+           D
          {% endif %}
-         {% if objempleado.horario.MI=="CI"  %}
-           CI
+         {% if objempleado.horario.MI=="I"  %}
+           I
          {% endif %}
-         {% if objempleado.horario.MI=="X"  %}
-           X
+         {% if objempleado.horario.MI=="V"  %}
+           V
          {% endif %}
+         
       </td>
       <td >
           {% if objempleado.horario.J=="A"  %}
            A
          {% endif %}
-         {% if objempleado.horario.J=="AA"  %}
-           AA
-         {% endif %}
-         {% if objempleado.horario.J=="VA"  %}
-           VA
-         {% endif %}
          {% if objempleado.horario.J=="D"  %}
            D
          {% endif %}
-         {% if objempleado.horario.J=="CA"  %}
-           CA
+         {% if objempleado.horario.J=="F"  %}
+           F
          {% endif %}
-         {% if objempleado.horario.J=="CI"  %}
-           CI
+         {% if objempleado.horario.J=="I"  %}
+           I
          {% endif %}
-         {% if objempleado.horario.J=="X"  %}
-           X
+         {% if objempleado.horario.J=="V"  %}
+           V
          {% endif %}
+        
       </td>
       <td >
           {% if objempleado.horario.V=="A"  %}
            A
          {% endif %}
-         {% if objempleado.horario.V=="AA"  %}
-           AA
-         {% endif %}
-         {% if objempleado.horario.V=="VA"  %}
-           VA
-         {% endif %}
          {% if objempleado.horario.V=="D"  %}
            D
          {% endif %}
-         {% if objempleado.horario.V=="CA"  %}
-           CA
+         {% if objempleado.horario.V=="F"  %}
+           F
          {% endif %}
-         {% if objempleado.horario.V=="CI"  %}
-           CI
+         {% if objempleado.horario.V=="I"  %}
+           I
          {% endif %}
-         {% if objempleado.horario.V=="X"  %}
-           X
+         {% if objempleado.horario.V=="V"  %}
+           V
          {% endif %}
+         
       </td>
       <td >
           {% if objempleado.horario.S=="A"  %}
            A
          {% endif %}
-         {% if objempleado.horario.S=="AA"  %}
-           AA
-         {% endif %}
-         {% if objempleado.horario.S=="VA"  %}
-           VA
-         {% endif %}
          {% if objempleado.horario.S=="D"  %}
            D
          {% endif %}
-         {% if objempleado.horario.S=="CA"  %}
-           CA
+         {% if objempleado.horario.S=="F"  %}
+           F
          {% endif %}
-         {% if objempleado.horario.S=="CI"  %}
-           CI
+         {% if objempleado.horario.S=="I"  %}
+           I
          {% endif %}
-         {% if objempleado.horario.S=="X"  %}
-           X
+         {% if objempleado.horario.S=="V"  %}
+           V
          {% endif %}
-       
 
       </td>
 
